@@ -72,10 +72,10 @@ final class DefaultCodemodExecutor implements CodemodExecutor {
      * Filter the files to those that the CodemodRunner supports.
      */
     List<Path> codemodTargetFiles =
-        filePaths.stream().filter(codemodRunner::supports).collect(Collectors.toList());
+        filePaths.stream().filter(codemodRunner::supports).sorted().toList();
 
     for (Path filePath : codemodTargetFiles) {
-
+      System.out.println("  Running on file " + filePath.toString());
       // create the context necessary for the codemod to run
       LineIncludesExcludes lineIncludesExcludes =
           includesExcludes.getIncludesExcludesForFile(filePath.toFile());
